RESOLVED FIXED299703
[Navigation API] activation-history-replaceState.html and pushState fail on WPT
https://bugs.webkit.org/show_bug.cgi?id=299703
Summary [Navigation API] activation-history-replaceState.html and pushState fail on WPT
rupin
Reported 2025-09-28 10:38:11 PDT
[Navigation API] activation-history-replaceState.html and pushState fail on WPT
Attachments
Radar WebKit Bug Importer
Comment 1 2025-09-28 10:38:23 PDT
rupin
Comment 2 2025-09-28 15:33:46 PDT
EWS
Comment 3 2025-09-29 13:49:04 PDT
Committed 300712@main (74d7462ebe66): <https://commits.webkit.org/300712@main> Reviewed commits have been landed. Closing PR #51475 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.